[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/font/HUD_font_large.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/font/HUD_font_medium.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/font/Login.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/sound/laser5.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/laser2.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
use_filter = true
font_data = ExtResource( 4 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Speed" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -259.0
margin_top = -100.0
margin_right = -20.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 0
text = "100 kph"
align = 2
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -113.0
margin_top = -152.0
margin_right = 112.0
margin_bottom = -12.0
alignment = 1

[node name="BestTimeDiff" type="Label" parent="VBoxContainer"]
margin_top = 7.0
margin_right = 225.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 0
text = "+0.00"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="VBoxContainer/BestTimeDiff"]
wait_time = 3.0

[node name="Chronometer" type="Label" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 225.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 0
text = "0:00.00"
align = 1
valign = 1

[node name="CheckpointCount" type="Label" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 225.0
margin_bottom = 133.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 0
text = "0/3"
align = 1
valign = 1

[node name="Destroyed" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = -39.0
margin_right = 332.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Destroyed!"

[node name="LaserHigh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="LaserLow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Pause" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.238281, 0.238281, 0.238281, 0.375686 )

[node name="Paused" type="Label" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = -39.0
margin_right = 332.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Game paused"
[connection signal="timeout" from="VBoxContainer/BestTimeDiff/Timer" to="." method="_on_best_time_diff_timeout"]
